[package]
name = "cache_oblivious_rust"
version = "0.1.0"
authors = ["Reid Atcheson <reid.atcheson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
rayon = "1.5.0"
blas = "0.21.0"
openblas-src = "0.10.2"
itertools="0.10.0"
